time is allmost running out, some more changes

--- a/presentation.ipynb
+++ b/presentation.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:7e1ecabc7e56c7eaf697b48b86b5a44461f94f911644d8d8b1fc6efdc846e32f"
+  "signature": "sha256:3c67a18e4091b6462e3ea7506a945489f43895504d279a3748912f0463899cf1"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -41,7 +41,19 @@
       }
      },
      "source": [
-      "#  The Open Science of Making Torque from Wind"
+      "#  The Open Science of Making Torque from Wind\n",
+      "\n",
+      "Thoughts and idea's towards increased collaboration and accelerated research progress for Wind Energy\n",
+      "\n",
+      "Authors and collaborators: David Verelst, Leonardo Bergami, Carlo Tibaldi, Jos\u00e9 Blasques (DTU Wind Energy)\n",
+      "\n",
+      "\n",
+      "\n",
+      "This is an [IPython notebook](http://ipython.org/notebook.html), source available on Github, view using the online notebook viewer\n",
+      "\n",
+      "* source: https://github.com/davidovitch/open-science-making-torque-from-wind\n",
+      "\n",
+      "* viewer: http://nbviewer.ipython.org/github/davidovitch/open-science-making-torque-from-wind/blob/master/presentation.ipynb"
      ]
     },
     {
@@ -77,7 +89,8 @@
       "\n",
       "\n",
       "* Standard practice other fields such as economics, mathematics\n",
-      "* Back to the basics of the scientific process"
+      "* Back to the basics of the scientific process\n",
+      "* Science 3.0"
      ]
     },
     {
@@ -94,19 +107,18 @@
       "* Publicly funded, publicly accessible (US, EU partially)\n",
       "* Accelerate progress:\n",
       "\n",
-      "    * more sharing\n",
-      "    * less double work\n",
+      "    * more sharing, less double work\n",
       "    * more checks\n",
       "    * increased quality\n",
       "\n",
       "* Increase societal impact\n",
-      "* For the benefit of all of society: distribute technology without discrimination\n",
+      "* For the benefit of all of society: distribute knowledge without discrimination\n",
       "* University top level strategy seems to align perfectly well with Open Science dogma's:\n",
       "    \n",
       "    * international collaboration with fellow researchers\n",
       "    * accelerate innovation\n",
       "    * collaboration with industry\n",
-      "    * address relevant problems in society"
+      "    * address relevant problems in society, for the benefit of society"
      ]
     },
     {
@@ -128,35 +140,20 @@
       }
      },
      "source": [
-      "# What open science is not\n",
+      "# What Open Science is Not\n",
       "\n",
-      "* Thread to scientists, this is an opportunity to proof our (increasing) relevance to society\n",
-      "* It is not a fundamental critique on fellow researchers, it fits in the spirit of science: to be critical and be always open for improvements, because we know perfection is not of this world\n",
-      "* The road to heaven or perfection"
+      "* Thread to the \"established order\", this is a renewed opportunity to proof our (increasing) relevance to society\n",
+      "* A buzzword that will attract new venture capital and makes us researchers even more rich\n",
+      "* The road to heaven"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {
       "slideshow": {
-       "slide_type": "notes"
+       "slide_type": "slide"
       }
      },
-     "source": [
-      "* For inspiration, quote some of Piketty's stuff in the introduction of Capital in the 21 century\n",
-      "\n",
-      "We should really go back to what is the core task of a universities. Are we really creating for knowledge for the benefit of all of mankind, or just targeted industries and interests? What is society expecting from us, beyond the industry lobby groups, and beyond professors wanting to secure the next round of funding to boost a career.\n",
-      "\n",
-      "Citing Peter Suber's [Open Access](http://mitpress.mit.edu/books/open-access) book:\n",
-      "\n",
-      "Even the wealthiest academic libraries in the world suffer serious access gaps. When the Harvard Faculty of Arts and Sciences voted unanimously for a strong OA policy in February 2008, Professor Stuart Shieber explained that cumulative price increases had forced the Harvard library to undertake \u201cserious cancellation efforts\u201d for budgetary reasons. Access gaps are worse at other affluent institutions, and worse still in the developing world. In 2008, Harvard subscribed to 98,900 serials and Yale to 73,900. The best-funded research library in India, at the Indian Institute of Science, subscribed to 10,600. Several sub-Saharan African university libraries subscribed to zero, offering their patrons access to no conventional journals except those donated by publishers.\n",
-      "\n",
-      "For example, how is it that we publish in the AIAA while DTU does not even have (digital) access to those libraries?"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
      "source": [
       "# Open Data\n",
       "\n",
@@ -172,7 +169,11 @@
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
      "source": [
       "# Open Source\n",
       "\n",
@@ -181,38 +182,82 @@
       "* Code is an important part of our work, proper review is required\n",
       "* Learn from the (open source) software development community: \n",
       "    \n",
-      "    * geographically distributed teams, highly collaborative (international), transparent\n",
+      "    * geographically distributed teams, highly collaborative (international), transparent, creating high quality complex and widely used software\n",
       "    * consistency: coding guidelines, code commit workflow\n",
       "    * code review practices"
      ]
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
      "source": [
       "# Open Access\n",
       "\n",
-      "* Different levels: gold, green, ...\n",
-      "* Monitoring project open access at DTU\n",
+      "* Different levels: gold, green\n",
+      "* Do scientists care about open access?\n",
       "\n",
+      "    * Some quotes from Phil Davis [blog](http://scholarlykitchen.sspnet.org/2014/05/15/what-researchers-value-from-publishers-canadian-survey/):\n",
+      "    * Scientists have many identities, and tapping into the fundamental desire of the scientist-as-reader (access to everyone else\u2019s work), does not always coincide with the fundamental desire of the scientist-as-author (recognition by one\u2019s peers).\n",
+      "    * Consider page 11 of the Canadian study. While 97% of respondents relied on their institution\u2019s subscription to access journal articles, the next most frequent response was contacting the author(s) directly for a copy (91%), followed by institutional repositories (76%), ignoring the article (75%), and social networking sites (50%). Pay per view took last spot at 27%.\n",
       "\n",
-      "Interesting discussion initiated by Phil Davis [here](http://scholarlykitchen.sspnet.org/2014/05/15/what-researchers-value-from-publishers-canadian-survey/). Some quotes:\n",
-      "\n",
-      "* Scientists have many identities, and tapping into the fundamental desire of the scientist-as-reader (access to everyone else\u2019s work), does not always coincide with the fundamental desire of the scientist-as-author (recognition by one\u2019s peers).\n",
-      "\n",
-      "* Consider page 11 of the Canadian study. While 97% of respondents relied on their institution\u2019s subscription to access journal articles, the next most frequent response was contacting the author(s) directly for a copy (91%), followed by institutional repositories (76%), ignoring the article (75%), and social networking sites (50%). Pay per view took last spot at 27%.\n",
-      "\n",
+      "* Is open access relevant?\n",
+      "    \n",
+      "    * Yes, if we want research to be accessible beyond wealthy institutes.\n",
+      "    * From the open access book on [Open Access](http://mitpress.mit.edu/books/open-access) by Peter Suber, rich Libraries have up to 100,000 subscriptions (Harvard), top Indian institute 10,000, and down to zero for many other institutes in the development world.\n",
+      "    * Why wouldn't it be relevant?\n",
+      "    * Innovation florishes when knowledge is wide-spread and easily accessible\n",
+      "    * Publicly funded, publicly accessible"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
       "# Open Peer Review\n",
+      "\n",
+      "* The review process is open and transparent\n",
+      "* Reviewer can chose to remain anonymous or not\n",
+      "* Review and discussion can continue after the publication!\n",
+      "* Give reviewers incentives:\n",
+      "\n",
+      "    * citable reviews\n",
+      "    * include citations to the reviews that helped improving the publciations\n",
+      " \n",
+      "* For a more detailed discussion, see an initiative in computer science [here](http://yann.lecun.com/ex/pamphlets/publishing-models.html), and [here](http://hunch.net/?p=1086)\n",
+      "\n",
       "\n",
       "* [What Motivates Reviewers? An Experiment in Economics](http://scholarlykitchen.sspnet.org/2014/05/28/what-motivates-reviewers-an-experiment-in-economics/)\n",
       "\n",
       "    * \u201cIt takes a researcher 3-5 hours to review a manuscript,\u201d editors quip, \u201cwhether you give him/her a week or six months!\u201d\n",
       "    \n",
-      "* High impact OA journal: chicken and egg story, first you need to a low impact journal, than grow\n",
-      "* Platforms: \n",
+      "* High impact OA journal: chicken and egg story, first you need to a low impact journal, than grow"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "notes"
+      }
+     },
+     "source": [
+      "* For inspiration, quote some of Piketty's stuff in the introduction of Capital in the 21 century\n",
       "\n",
-      "    * http://openreview.net/\n",
-      "    "
+      "We should go back to what is the core task of a universities. Are we really creating for knowledge for the benefit of all of mankind, or just targeted industries and interests? What is society expecting from us, beyond the industry lobby groups, and beyond professors wanting to secure the next round of funding to boost a career.\n",
+      "\n",
+      "Citing Peter Suber's [Open Access](http://mitpress.mit.edu/books/open-access) book:\n",
+      "\n",
+      "Even the wealthiest academic libraries in the world suffer serious access gaps. When the Harvard Faculty of Arts and Sciences voted unanimously for a strong OA policy in February 2008, Professor Stuart Shieber explained that cumulative price increases had forced the Harvard library to undertake \u201cserious cancellation efforts\u201d for budgetary reasons. Access gaps are worse at other affluent institutions, and worse still in the developing world. In 2008, Harvard subscribed to 98,900 serials and Yale to 73,900. The best-funded research library in India, at the Indian Institute of Science, subscribed to 10,600. Several sub-Saharan African university libraries subscribed to zero, offering their patrons access to no conventional journals except those donated by publishers.\n",
+      "\n",
+      "For example, how is it that we publish in the AIAA while DTU does not even have (digital) access to those libraries?"
      ]
     },
     {
@@ -227,25 +272,30 @@
       "\n",
       "* Scientitif careers are by default not made with an open approach. So how can we realistically expect researches to value and follow open science guidelines?\n",
       "\n",
-      "### Cultural and political challenges\n",
+      "### Cultural and political changes\n",
       "* Code sharing, open source software development methodologies\n",
       "* Open data: sharing of experimental and simulation results by default (for example see the US, soon EU too?)\n",
       "* Agreements on software model interfaces and protocols\n",
       "\n",
       "### Funding and infrastructural challanges\n",
-      "* Open data: persitant funding for infrastructure\n",
+      "* Open data: deployment and maintenance of tools for sharing data\n",
       "* Retaining data: persistant funding for infrastructure\n",
-      "* High impact Open Access journal: demand publishing open access license (Horizon 2020 requirement)"
+      "* High impact Open Access journal: demand from publishers availability for gold open access license (Horizon 2020 requirement)\n",
+      "* Open source models: securing long term funding across projects"
      ]
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
      "source": [
       "# Problems and Pitfalls\n",
       "\n",
       "* Funding: cutting the branch you're sitting on\n",
-      "* Funding: expensive open access journals\n",
+      "* Funding: expensive open access journals, small compared to project budget (small projects, institutes?)\n",
       "* Unconftarble working in the public eye\n",
       "* Currently no high impact open access journals"
      ]
@@ -270,26 +320,19 @@
       "\n",
       "* EU [Open Data](http://ec.europa.eu/digital-agenda/public-sector-information-raw-data-new-services-and-products) agenda\n",
       "\n",
-      "* Tesla (Elon Musk) [opens](http://www.teslamotors.com/blog/all-our-patent-are-belong-you) up all its patents: the real competitor is else where\n",
+      "* An innovative concept to share open data with collaborators, under development: [dat](http://dat-data.com/)\n",
+      "\n",
+      "* Tesla (Elon Musk) [opens](http://www.teslamotors.com/blog/all-our-patent-are-belong-you) up all its patents: the real competitor is else where, to fight climate change sustainable energy needs to grow much faster than a single company can\n",
       "\n",
       "* NASA is increasingly opening up [code](code.nasa.gov), and works actively on engaging with the [community](http://open.nasa.gov/)\n",
       "\n",
       "* Alternative ways of (crowd) funding research, for example [Experiment](https://experiment.com/)\n",
       "\n",
-      "* [Center for Open Science](http://centerforopenscience.org/), [Open Science Framework](https://osf.io/)\n"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "# What is currently happening\n",
+      "* [Center for Open Science](http://centerforopenscience.org/), [Open Science Framework](https://osf.io/)\n",
       "\n",
-      "* UN called upon an emmergency climate top, US, China willing to finally commit to emmission reductions, Finland adopting 80% reduction scheme, ...\n",
+      "* Preparing the UN climate meeting 2015 in Paris, US, China willing to finally commit to emmission reductions, Finland adopting 80% reduction scheme by 2050, ...\n",
       "\n",
-      "* Climate change is our real challenge, in order to maximize renewable energy technologies we must work and share more openly. See what Tesla is doing!\n",
-      "\n",
-      "* http://centerforopenscience.org/"
+      "* Climate change is our real challenge, in order to maximize renewable energy adoption we must work and share more openly"
      ]
     },
     {
@@ -305,26 +348,76 @@
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
      "source": [
       "# Tools\n",
       "\n",
+      "* Some open tools as an example\n",
+      "* Ideally, the IT infrastructure is jointly funded by a group of universities, no need for unnecessary duplication\n",
+      "* Similar propriety tools could also be used, not listed here\n",
+      "\n",
+      "\n",
       "### Open Data\n",
+      "* As long as it is accessible, documented and versioned!\n",
+      "* Cloud server software: [owncloud](http://owncloud.org/)\n",
+      "* Cloud storage service providers: [box](https://www.box.com/), [dropbox](https://www.dropbox.com/), [spyderoak](https://spideroak.com/), and many others\n",
       "\n",
       "\n",
-      "\n",
-      "### Open Source\n",
-      "* Version control: [Git](http://www.git-scm.com/), [Hg](http://mercurial.selenic.com/)\n",
+      "### Open Source Software Development\n",
+      "* Version control for text files: [Git](http://www.git-scm.com/), [Hg](http://mercurial.selenic.com/)\n",
       "* Collaborative software development: [Github](https://github.com/), [Gitlab](https://www.gitlab.com/), [Redmine](http://www.redmine.org/), [Phabricator](http://phabricator.org/), [Bitbucket](https://bitbucket.org/)\n",
       "\n",
-      "### Open Peer Review\n",
       "\n",
-      "* http://openreview.net/"
+      "### Open Peer Review, Open Access Publishing\n",
+      "* [Open Review Net](http://openreview.net/), an initiative from the computer science community\n",
+      "* [Ambra](http://www.ambraproject.org/), drives [PLOS (Public Library of Science)](http://www.plos.org/)\n",
+      "* [Open Journal Systems](https://pkp.sfu.ca/?q=ojs), as used by over 6,000 journals"
      ]
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "# What's next?\n",
+      "\n",
+      "* Establish a network of interested collaborators with an as varied range of backgrounds as possible\n",
+      "* Continue under the umbrella of the EAWE?\n",
+      "* Funding/support for a course/practical guideline on open science methodologies and practices (version control, data sharing)\n",
+      "\n",
+      "\n",
+      "* Publish only in open access journals\n",
+      "* Identify collaborators for open source model development\n",
+      "* Documenting data sets\n",
+      "* Publically sharing data sets\n",
+      "* Convince publishers and editors to experiment with open peer review"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "# Discussion"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "notes"
+      }
+     },
      "source": [
       "http://ivory.idyll.org/blog//2014-myths-of-computational-reproducibility.html\n",
       "\n",
@@ -341,7 +434,9 @@
      "source": [
       "## Notes for future presentations\n",
       "\n",
-      "What about patents? Do they matter? Pattents are originaly intendet to \"promote the progress of science and the useful arts\". Is that still the case? "
+      "What about patents? Do they matter? Pattents are originaly intendet to \"promote the progress of science and the useful arts\". Is that still the case? \n",
+      "\n",
+      "* Open Access Barometer project at DTU (ended Dec 2013)"
      ]
     }
    ],
