changes to have a nice view on slideviewer.herokuapp.com

--- a/presentation.ipynb
+++ b/presentation.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:3c67a18e4091b6462e3ea7506a945489f43895504d279a3748912f0463899cf1"
+  "signature": "sha256:9dfcd7f6e417c1823383c42dff3907de267ae7bf64852df9bbcb72e13c2b7c14"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -51,9 +51,9 @@
       "\n",
       "This is an [IPython notebook](http://ipython.org/notebook.html), source available on Github, view using the online notebook viewer\n",
       "\n",
-      "* source: https://github.com/davidovitch/open-science-making-torque-from-wind\n",
+      "* source: [https://github.com/davidovitch/open-science-making-torque-from-wind](https://github.com/davidovitch/open-science-making-torque-from-wind)\n",
       "\n",
-      "* viewer: http://nbviewer.ipython.org/github/davidovitch/open-science-making-torque-from-wind/blob/master/presentation.ipynb"
+      "* viewer: [http://nbviewer.ipython.org/github/davidovitch/open-science-making-torque-from-wind/blob/master/presentation.ipynb](http://nbviewer.ipython.org/github/davidovitch/open-science-making-torque-from-wind/blob/master/presentation.ipynb)"
      ]
     },
     {
@@ -202,7 +202,18 @@
       "\n",
       "    * Some quotes from Phil Davis [blog](http://scholarlykitchen.sspnet.org/2014/05/15/what-researchers-value-from-publishers-canadian-survey/):\n",
       "    * Scientists have many identities, and tapping into the fundamental desire of the scientist-as-reader (access to everyone else\u2019s work), does not always coincide with the fundamental desire of the scientist-as-author (recognition by one\u2019s peers).\n",
-      "    * Consider page 11 of the Canadian study. While 97% of respondents relied on their institution\u2019s subscription to access journal articles, the next most frequent response was contacting the author(s) directly for a copy (91%), followed by institutional repositories (76%), ignoring the article (75%), and social networking sites (50%). Pay per view took last spot at 27%.\n",
+      "    * Consider page 11 of the Canadian study. While 97% of respondents relied on their institution\u2019s subscription to access journal articles, the next most frequent response was contacting the author(s) directly for a copy (91%), followed by institutional repositories (76%), ignoring the article (75%), and social networking sites (50%). Pay per view took last spot at 27%."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "# Open Access (2)\n",
       "\n",
       "* Is open access relevant?\n",
       "    \n",
@@ -314,11 +325,22 @@
       "    \n",
       "    * UC Berkeley, 1.15M$ from the Sloan Foundation [link](http://ipython.org/sloan-grant.html)\n",
       "    \n",
-      "    * 3 US universities secured 37.5M$ from [link](http://blog.fperez.org/2013/11/an-ambitious-experiment-in-data-science.html) <img src=\"images/Data_Science_VD.png\" WIDTH=\"40%\">\n",
+      "    * 3 US universities (UC Berkeley, University of Washington, and NYU) secured 37.5M$ from several funding bodies [link](http://blog.fperez.org/2013/11/an-ambitious-experiment-in-data-science.html) <img src=\"images/Data_Science_VD.png\" WIDTH=\"30%\">\n",
       "\n",
       "* EU Horizon 2020 call requires open access publishing (see [press release](http://europa.eu/rapid/press-release_IP-12-790_en.htm))\n",
       "\n",
-      "* EU [Open Data](http://ec.europa.eu/digital-agenda/public-sector-information-raw-data-new-services-and-products) agenda\n",
+      "* EU [Open Data](http://ec.europa.eu/digital-agenda/public-sector-information-raw-data-new-services-and-products) agenda"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "# What is currently happening (2)\n",
       "\n",
       "* An innovative concept to share open data with collaborators, under development: [dat](http://dat-data.com/)\n",
       "\n",
@@ -364,8 +386,18 @@
       "### Open Data\n",
       "* As long as it is accessible, documented and versioned!\n",
       "* Cloud server software: [owncloud](http://owncloud.org/)\n",
-      "* Cloud storage service providers: [box](https://www.box.com/), [dropbox](https://www.dropbox.com/), [spyderoak](https://spideroak.com/), and many others\n",
-      "\n",
+      "* Cloud storage service providers: [box](https://www.box.com/), [dropbox](https://www.dropbox.com/), [spyderoak](https://spideroak.com/), and many others\n"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "# Tools (2)\n",
       "\n",
       "### Open Source Software Development\n",
       "* Version control for text files: [Git](http://www.git-scm.com/), [Hg](http://mercurial.selenic.com/)\n",
