removed Google Docs reference, added link to presentation mode

--- a/presentation.ipynb
+++ b/presentation.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:9dfcd7f6e417c1823383c42dff3907de267ae7bf64852df9bbcb72e13c2b7c14"
+  "signature": "sha256:11b92ea9593b44a094c64dfecc9e81b8b00bee495f6911a7cd2b8230442a121e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -28,9 +28,7 @@
       "\n",
       "Modern research often utilizes complex software models and large data sets not disclosed to the public domain. This approach hampers independent review and the reproducibility of research results. By removing such barriers, OS ensures that advancements are achieved through transparent and robustly validated steps. The review of scientific results in an open framework (open peer review) guarantees the quality of the results by enhanced transparency in the review process, and encourages active enduring contributions both from qualified reviewers and members of the research community. Dissemination and publication of scientific knowledge in an open access (OA) format reduces access barriers to published material, and enhances knowledge sharing. OA benefits the scientific community with the availability of a broader knowledge base, and the possibility to reach a wider audience, thus improves knowledge usage, increases citations, and amplifies the impact on society. The advantages of OA publications are recognized by mayor public funding programs, and they encourage actively to distribute the results from their sponsored projects as OA.\n",
       "\n",
-      "The shift towards an OS framework is occurring unevenly among disciplines. While some research fields are embracing more open practices rapidly, wind energy appears to lag behind. The paper aims at raising awareness, and stirring the debate within the wind energy research community about OS and its fundamental methods and tools. It is the authors\u2019 hope that the paper will initiate a collaborative and \u201copen\u201d discussion forum on Open Science using the Torque 2014 conference as its kick-off event.\n",
-      "\n",
-      "see also google docs working [document](https://docs.google.com/document/d/1_r1EDM-AAt1kRPv-zNWPDn_-so8K3Z_syrNjfXKb8_w/edit?pli=1#heading=h.gcjnjqj7727t)"
+      "The shift towards an OS framework is occurring unevenly among disciplines. While some research fields are embracing more open practices rapidly, wind energy appears to lag behind. The paper aims at raising awareness, and stirring the debate within the wind energy research community about OS and its fundamental methods and tools. It is the authors\u2019 hope that the paper will initiate a collaborative and \u201copen\u201d discussion forum on Open Science using the Torque 2014 conference as its kick-off event."
      ]
     },
     {
@@ -51,9 +49,9 @@
       "\n",
       "This is an [IPython notebook](http://ipython.org/notebook.html), source available on Github, view using the online notebook viewer\n",
       "\n",
-      "* source: [https://github.com/davidovitch/open-science-making-torque-from-wind](https://github.com/davidovitch/open-science-making-torque-from-wind)\n",
-      "\n",
-      "* viewer: [http://nbviewer.ipython.org/github/davidovitch/open-science-making-torque-from-wind/blob/master/presentation.ipynb](http://nbviewer.ipython.org/github/davidovitch/open-science-making-torque-from-wind/blob/master/presentation.ipynb)"
+      "* view as notebook: [http://nbviewer.ipython.org/github/davidovitch/open-science-making-torque-from-wind/blob/master/presentation.ipynb](http://nbviewer.ipython.org/github/davidovitch/open-science-making-torque-from-wind/blob/master/presentation.ipynb)\n",
+      "* view as presentation: [http://slideviewer.herokuapp.com/github/davidovitch/open-science-making-torque-from-wind/blob/master/presentation.ipynb](http://slideviewer.herokuapp.com/github/davidovitch/open-science-making-torque-from-wind/blob/master/presentation.ipynb)\n",
+      "* download source of the notebook: [https://github.com/davidovitch/open-science-making-torque-from-wind](https://github.com/davidovitch/open-science-making-torque-from-wind)"
      ]
     },
     {
