--- a/presentation.ipynb
+++ b/presentation.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:11b92ea9593b44a094c64dfecc9e81b8b00bee495f6911a7cd2b8230442a121e"
+  "signature": "sha256:5d0917491b67f8984ebe41e2ec84ff01dfe544997e04b74f05e13333636922d6"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -45,7 +45,9 @@
       "\n",
       "Authors and collaborators: David Verelst, Leonardo Bergami, Carlo Tibaldi, Jos\u00e9 Blasques (DTU Wind Energy)\n",
       "\n",
+      "About the [conference](http://www.torque2014.dk):\n",
       "\n",
+      "> The Science of Making Torque from Wind is one of the most important scientific wind energy conferences. This is the fifth time that this conference is organized, and the second time to be organized at the Technical University of Denmark. \n",
       "\n",
       "This is an [IPython notebook](http://ipython.org/notebook.html), source available on Github, view using the online notebook viewer\n",
       "\n",
@@ -178,11 +180,30 @@
       "* Software implementation of models are open\n",
       "* Usage of version control system: Git, Mercurial (Hg)\n",
       "* Code is an important part of our work, proper review is required\n",
+      "* [Not Invented/Implemented Here](https://en.wikipedia.org/wiki/Not_Invented_Here) Syndrom: re-doing labours but otherwise not so interesting model implementations slows down progress.\n",
       "* Learn from the (open source) software development community: \n",
       "    \n",
       "    * geographically distributed teams, highly collaborative (international), transparent, creating high quality complex and widely used software\n",
       "    * consistency: coding guidelines, code commit workflow\n",
       "    * code review practices"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "# Open Source (2)\n",
+      "\n",
+      "* But...what if other scientists \"steal\" my software and compete with me for the same grants?\n",
+      "    \n",
+      "    * Fraud and copyright violations also apply to any other context. \n",
+      "    * When the sources are public it is extremely easy to establish plagiarism\n",
+      "    * Why would a funding agency prefer a group that merely uses certain models/software over a group that actually develops the software?\n",
+      "    * The developers will have a much deeper insight into the code, and this will always gives the them the proverbial edge"
      ]
     },
     {
@@ -224,6 +245,18 @@
     },
     {
      "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "# Peer Review\n",
+      "\n",
+      "* Quality is an issue: many poorly reviewed open access publications\n",
+      "* Open Access journals can be a scam, and there too many of them\n",
+      "* A dire need for more clear and transparent review practices\n",
+      "* Central review platform?"
+     ]
+    },
+    {
+     "cell_type": "markdown",
      "metadata": {
       "slideshow": {
        "slide_type": "slide"
@@ -245,9 +278,7 @@
       "\n",
       "* [What Motivates Reviewers? An Experiment in Economics](http://scholarlykitchen.sspnet.org/2014/05/28/what-motivates-reviewers-an-experiment-in-economics/)\n",
       "\n",
-      "    * \u201cIt takes a researcher 3-5 hours to review a manuscript,\u201d editors quip, \u201cwhether you give him/her a week or six months!\u201d\n",
-      "    \n",
-      "* High impact OA journal: chicken and egg story, first you need to a low impact journal, than grow"
+      "    * \u201cIt takes a researcher 3-5 hours to review a manuscript,\u201d editors quip, \u201cwhether you give him/her a week or six months!\u201d"
      ]
     },
     {
@@ -258,8 +289,6 @@
       }
      },
      "source": [
-      "* For inspiration, quote some of Piketty's stuff in the introduction of Capital in the 21 century\n",
-      "\n",
       "We should go back to what is the core task of a universities. Are we really creating for knowledge for the benefit of all of mankind, or just targeted industries and interests? What is society expecting from us, beyond the industry lobby groups, and beyond professors wanting to secure the next round of funding to boost a career.\n",
       "\n",
       "Citing Peter Suber's [Open Access](http://mitpress.mit.edu/books/open-access) book:\n",
@@ -303,10 +332,14 @@
      "source": [
       "# Problems and Pitfalls\n",
       "\n",
-      "* Funding: cutting the branch you're sitting on\n",
+      "* Reduced funding success rates: competing groups can use the same tools we developed and have access to the same data?\n",
+      "    \n",
+      "    * In the European wind energy context, how often is their real compition for the same project?\n",
+      "    * Collaboration instead of competition\n",
+      "\n",
       "* Funding: expensive open access journals, small compared to project budget (small projects, institutes?)\n",
       "* Unconftarble working in the public eye\n",
-      "* Currently no high impact open access journals"
+      "* Currently no high impact open access journals for wind energy"
      ]
     },
     {
@@ -340,13 +373,15 @@
      "source": [
       "# What is currently happening (2)\n",
       "\n",
+      "* [HackYourPhD](http://hackyourphd.org/en/), collective of young researchers, developers and citizens calling on an open and transparent scientific process\n",
+      "\n",
       "* An innovative concept to share open data with collaborators, under development: [dat](http://dat-data.com/)\n",
       "\n",
       "* Tesla (Elon Musk) [opens](http://www.teslamotors.com/blog/all-our-patent-are-belong-you) up all its patents: the real competitor is else where, to fight climate change sustainable energy needs to grow much faster than a single company can\n",
       "\n",
       "* NASA is increasingly opening up [code](code.nasa.gov), and works actively on engaging with the [community](http://open.nasa.gov/)\n",
       "\n",
-      "* Alternative ways of (crowd) funding research, for example [Experiment](https://experiment.com/)\n",
+      "* Alternative ways of (crowd) funding research, for example [Experiment](https://experiment.com/) and [SciFund Challange](http://scifundchallenge.org/)\n",
       "\n",
       "* [Center for Open Science](http://centerforopenscience.org/), [Open Science Framework](https://osf.io/)\n",
       "\n",
@@ -405,7 +440,8 @@
       "### Open Peer Review, Open Access Publishing\n",
       "* [Open Review Net](http://openreview.net/), an initiative from the computer science community\n",
       "* [Ambra](http://www.ambraproject.org/), drives [PLOS (Public Library of Science)](http://www.plos.org/)\n",
-      "* [Open Journal Systems](https://pkp.sfu.ca/?q=ojs), as used by over 6,000 journals"
+      "* [Open Journal Systems](https://pkp.sfu.ca/?q=ojs), as used by over 6,000 journals\n",
+      "* [PeerJ](https://peerj.com/) an affordable open access, open peer review digital scientific publisher"
      ]
     },
     {
