cell should be a slide

--- a/presentation.ipynb
+++ b/presentation.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:5d0917491b67f8984ebe41e2ec84ff01dfe544997e04b74f05e13333636922d6"
+  "signature": "sha256:1c355d38fbdce2ecfe7cc27fd2d5d94c07ec0b00ea986bff9167908868138708"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -245,7 +245,11 @@
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
      "source": [
       "# Peer Review\n",
       "\n",
